 - GBA Video: Blended sprites should never have other effects applied
 - GBA: Fix crash if a 512kb flash save is loaded when a game has a 1Mb flash override
 - Qt: Better cleanup when a game crashes
 - Qt: Fix open ROM dialog filtering for archive formats
 - ARM7: Fix Thumb MUL timing
 - Qt: Cap the maximum number of multiplayer windows
 - Qt: Fix maximum year in sensor override
Misc:
 - Qt: Handle saving input settings better
 - Debugger: Free watchpoints in addition to breakpoints
 - Qt: Move GL frame drawing back onto its own thread
 - GBA: Add status log level
 - GBA Thread: Add functionality for running callbacks on the GBA thread
 - Qt: Fast forward (held) option moved from Other to Emulation menu
 - All: Add --help flag for command line programs
 - Qt: Show version info in window title
 - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
 - GBA SIO: Add a dummy driver for Normal mode
 - GBA: GBARewind now returns how many states it has rewound
 - All: Enable static linking for Windows
 - All: Enable static linking for OS X
 - Qt: Migrate multiplayer window handling into GBAApp
 - Qt: Unified file opening and saving with last location
 - Qt: Fix windows being resizable when they shouldn't have been
 - Qt: Only hide cursor in full screen
 - Perf: Ability to load savestates immediately on launch

0.2.1: (2015-05-13)
Bugfixes:
 - All: Fix sanitize-deb script not cleaning up after itself
 - All: Fix dependencies for libavcodec on Debian-derived platforms
 - ARM7: Handle writeback for PC in addressing modes 2 and 3
 - ARM7: Make illegal instruction decoding consistent between ARM and Thumb
 - ARM7: Fix ARM multiply instructions when PC is a destination register
 - Debugger: Fix use-after-free in breakpoint clearing code
 - Debugger: Fix boundary conditions in tab completion
 - GBA: Fix timers not updating timing when writing to only the reload register
 - GBA: Fix rewind boundary conditions