@@ -33,6 +33,7 @@ Bugfixes:
  - ARM7: Fix Thumb MUL timing
  - Qt: Cap the maximum number of multiplayer windows
  - Qt: Fix maximum year in sensor override
+ - GBA: Cap audio FIFO read size during deserialization
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
